Config setup and compiling

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,2 +1,17 @@
 // Styling for the Good-Loop Portal app
 @import "../js/base/style/main-base.less";
+@import "./acorn.less";
+@import "./inspector-section.less";
+
+#dev-panel {
+
+    p {
+        margin: 0;
+        padding: 0.2rem;
+    }
+
+    hr {
+        margin: 0;
+    }
+
+}
