--- a/src/style/inspector-section.less
+++ b/src/style/inspector-section.less
@@ -1,6 +1,5 @@
 .inspector-section {
-
-    /*
+    
     &.open>.title {
         background-color: @acn-accent-primary-light;
         color:white;
@@ -9,12 +8,16 @@
     &:hover>.title {
         background-color: @acn-accent-primary-dark;
         color:white;
-    }*/
+    }
 
-    .toggle {
+    .title {
         &:hover {
             cursor: pointer;
         }
+    }
+
+    .value {
+        user-select: text;
     }
 
 }
