--- a/src/style/inspector-section.less
+++ b/src/style/inspector-section.less
@@ -8,11 +8,17 @@
     &:hover>.title {
         background-color: @acn-accent-primary-dark;
         color:white;
+        .val-preview {
+            color: white;
+        }
     }
 
     .title {
         &:hover {
             cursor: pointer;
+        }
+        .val-preview {
+            color: @acn-accent-primary-light;
         }
     }
 
