--- a/src/style/inspector-section.less
+++ b/src/style/inspector-section.less
@@ -22,6 +22,20 @@
         }
     }
 
+    .breakpoint {
+        text-decoration: none;
+        color: inherit;
+    }
+
+    .breakpoints {
+        margin-right: 3rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 10rem;
+    }
+
     .value {
         user-select: text;
     }
