--- a/src/style/inspector-section.less
+++ b/src/style/inspector-section.less
@@ -1,5 +1,5 @@
 .inspector-section {
-    
+
     &.open>.title {
         background-color: @acn-accent-primary-light;
         color:white;
@@ -14,6 +14,8 @@
     }
 
     .title {
+        text-overflow: clip;
+        overflow-y: hidden;
         &:hover {
             cursor: pointer;
         }
@@ -38,6 +40,7 @@
 
     .value {
         user-select: text;
+        margin-right: 3rem;
     }
 
 }
