--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,5 +1,5 @@
 // Styling for the Good-Loop Portal app
-@import "../js/base/style/main-base.less";
+//@import "../js/base/style/main-base.less";
 @import "./acorn.less";
 @import "./inspector-section.less";
 @import "./override-editor.less";
