--- a/src/style/override-editor.less
+++ b/src/style/override-editor.less
@@ -4,6 +4,12 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        select {
+            border: 1px solid @acn-border-primary;
+        }
+    }
+    .reset-all-btn {
+        border: 1px solid @acn-border-primary;
     }
     .key {
         overflow-x: hidden;
